# Tech-Store

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
db/: README.md
tech_store/: Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
tech_store/apps/users/: models.py  serializers.py  urls.py  views.py
tech_store/tech_store/: asgi.py  settings.py  urls.py  wsgi.py
