[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
django-rest-framework = "^0.1.0"
dotenv = "^0.9.9"
djangorestframework-simplejwt = "^5.5.1"
psycopg2 = "^2.9.10"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
