[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
djangorestframework = "^3.15.0"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.5.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.1.0"}
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
